--- a/templates/single_verify.html
+++ b/templates/single_verify.html
@@ -108,6 +108,7 @@
         <button class="btn btn-secondary w-100 mt-3" disabled title="Coming soon!">Bulk Verify (Coming Soon)</button>
     </div>
     <div id="result-container"></div>
+    <div class="footer">&copy; {{ 2025 }} LeadFinder. All rights reserved.</div>
   </div>
 </div>
 <script>
