--- a/templates/bulk_verify.html
+++ b/templates/bulk_verify.html
@@ -111,7 +111,10 @@
         <button class="btn btn-primary w-100">Upload and Verify</button>
       </form>
     </div>
-    <div class="footer">&copy; {{ 2025 }} LeadFinder. All rights reserved.</div>
+    <div class="footer">
+      &copy; {{ 2025 }} LeadFinder. All rights reserved. | 
+      <a href="mailto:peter@ijanta.com" class="text-decoration-none">Contact: peter@ijanta.com</a>
+    </div>
   </div>
 </div>
 <script>
