--- a/templates/index.html
+++ b/templates/index.html
@@ -116,7 +116,10 @@
       </form>
     </div>
     <div id="result-container"></div>
-    <div class="footer">&copy; {{ 2025 }} LeadFinder. All rights reserved.</div>
+    <div class="footer">
+      &copy; {{ 2025 }} LeadFinder. All rights reserved. | 
+      <a href="mailto:peter@ijanta.com" class="text-decoration-none">Contact: peter@ijanta.com</a>
+    </div>
   </div>
 </div>
 <script>
