--- a/templates/single_verify.html
+++ b/templates/single_verify.html
@@ -108,7 +108,10 @@
         <button class="btn btn-secondary w-100 mt-3" disabled title="Coming soon!">Bulk Verify (Coming Soon)</button>
     </div>
     <div id="result-container"></div>
-    <div class="footer">&copy; {{ 2025 }} LeadFinder. All rights reserved.</div>
+    <div class="footer">
+      &copy; {{ 2025 }} LeadFinder. All rights reserved. | 
+      <a href="mailto:peter@ijanta.com" class="text-decoration-none">Contact: peter@ijanta.com</a>
+    </div>
   </div>
 </div>
 <script>
