-No Email Found

--- a/templates/index.html
+++ b/templates/index.html
@@ -263,7 +263,7 @@
         }
       }).catch(error => {
         console.error('Error:', error);
-        alert('An error occurred during search. Please try again.');
+        alert('No Email Found for this Lead.');
       }).finally(() => {
         // Hide spinner
         hideSpinner();
