--- a/templates/single_verify.html
+++ b/templates/single_verify.html
@@ -105,7 +105,7 @@
                 <span id="btn-spinner" class="spinner-border spinner-border-sm ms-2" style="display: none;"></span>
             </button>
         </form>
-        <button class="btn btn-secondary w-100 mt-3" disabled title="Coming soon!">Bulk Verify (Coming Soon)</button>
+        <a href="/bulk-verify" class="w-full mt-3 bg-gray-300 text-gray-700 py-2 px-4 rounded block text-center hover:bg-gray-400 transition">Bulk Verify</a>
     </div>
     <div id="result-container"></div>
   </div>
