update user info

--- a/templates/single_verify.html
+++ b/templates/single_verify.html
@@ -168,7 +168,7 @@
   }
 
   function showContent(user) {
-    userInfo.textContent = user.displayName + ' (' + user.email + ')';
+    userInfo.textContent = user.displayName;
     loginBtn.style.display = 'none';
     logoutBtn.style.display = 'inline-block';
     mainContent.style.display = 'block';
