--- a/templates/bulk_verify.html
+++ b/templates/bulk_verify.html
@@ -132,7 +132,7 @@
   const loadingSpinner = document.getElementById('loading-spinner');
 
   function showContent(user) {
-    userInfo.textContent = user.displayName + ' (' + user.email + ')';
+    userInfo.textContent = user.displayName;
     loginBtn.style.display = 'none';
     logoutBtn.style.display = 'inline-block';
     mainContent.style.display = 'block';
