--- a/templates/index.html
+++ b/templates/index.html
@@ -235,7 +235,7 @@
   }
 
   function showContent(user) {
-    userInfo.textContent = user.displayName + ' (' + user.email + ')';
+    userInfo.textContent = user.displayName;
     loginBtn.style.display = 'none';
     logoutBtn.style.display = 'inline-block';
     mainContent.style.display = 'block';
