update bulk-ui info

--- a/templates/bulk_verify.html
+++ b/templates/bulk_verify.html
@@ -100,7 +100,7 @@
       <div class="spinner-border text-primary" role="status" style="width: 3rem; height: 3rem;">
         <span class="visually-hidden">Loading...</span>
       </div>
-      <div class="mt-2">Processing, please wait...</div>
+      <div class="mt-2">Processing Started, Your File we be ready for download from dashboard...</div>
     </div>
     <div id="upload-success" class="alert alert-success mb-4" style="display:none;"></div>
     <div class="card p-4 mb-4">
