--- a/templates/index.html
+++ b/templates/index.html
@@ -77,6 +77,7 @@
       <a href="/" class="btn btn-link">Email Finder</a>
       <a href="/single-verify" class="btn btn-link">Single Email Verify</a>
       <a href="/bulk-verify" class="btn btn-link">Bulk Email Verifier</a>
+      <a href="/bulk-finder" class="btn btn-link">Bulk Email Finder</a>
       <a href="/dashboard" class="btn btn-link fw-bold text-primary">Dashboard</a>
       <a href="mailto:peter@ijanta.com" class="btn btn-link">Support</a>
       <span id="user-info" class="ms-3"></span>
