--- a/templates/index.html
+++ b/templates/index.html
@@ -209,21 +209,18 @@
     if (data.emails && data.emails.length > 0) {
       // Filter valid emails
       const validEmails = data.emails.filter(function(emailData) {
-        return emailData[1];
+        return emailData[1].valid;
       });
       if (validEmails.length === 0) {
         // All emails are invalid, show modal
-        emailsHtml = '<p>No emails found.</p>';
+        emailsHtml = '<p>No valid emails found.</p>';
         var noEmailModal = new bootstrap.Modal(document.getElementById('noEmailModal'));
         noEmailModal.show();
       } else {
-        // Show only valid emails
-        emailsHtml = '<ul class="result-list">';
-        validEmails.forEach(function(emailData) {
-          const email = emailData[0];
-          emailsHtml += `<li>${email} - <span class="text-success fw-bold">✔ Valid</span></li>`;
-        });
-        emailsHtml += '</ul>';
+        // Show only the first valid email
+        const firstValidEmail = validEmails[0];
+        const email = firstValidEmail[0];
+        emailsHtml = `<p>${email} - <span class="text-success fw-bold">✔ Valid</span></p>`;
       }
     } else {
       emailsHtml = '<p>No emails found.</p>';
