single email-verify

--- a/templates/single_verify.html
+++ b/templates/single_verify.html
@@ -163,7 +163,7 @@
         <h4 class="mb-3">Result</h4>
         <p>
           <strong>${data.email}</strong> is
-          ${data.status ? 
+          ${data.status.valid ? 
             '<span class="text-success fw-bold">Valid ✅</span>' : 
             '<span class="text-danger fw-bold">Invalid ❌</span>'
           }
