--- a/templates/single_verify.html
+++ b/templates/single_verify.html
@@ -111,7 +111,7 @@
 
   <!-- Footer -->
   <footer class="text-center text-gray-500 text-sm py-6">
-    &copy; {{ 2025 }} LeadFinder. All rights reserved. |
+    &copy; {{ 2025 }} KnovaData. All rights reserved. |
     <a href="mailto:peter@ijanta.com" class="underline hover:text-gray-700">Contact: peter@ijanta.com</a>
   </footer>
 
